# dear

./: .gitignore  README.md  config_template.json  connection.py  main.py  pyproject.toml  requirements.txt
condaenv/: main.py
data/: main_data.csv  uploaded_file_name.txt
functions/: charts.py  dataset_ops.py  multipage.py  set_title.py  snowflake_connection.py  utils.py
page/: dbt_connector.py  null_check.py  table_comparison.py  upload_data.py  visualize_data.py
pages/: health_check.py  table_comparison.py  upload_data.py  visualize_data.py
