[tool.poetry]
name = "dear"
version = "0.1.0"
description = ""
authors = ["Cecil <cecil.ash@karbonhq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
seaborn = "^0.12.2"
plotly = "^5.14.1"
snowflake = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
